--- a/robot_explore/config/explore_costmap.yaml
+++ b/robot_explore/config/explore_costmap.yaml
@@ -8,12 +8,12 @@ transform_tolerance: 0.5
 update_frequency: 5.0
 publish_frequency: 2.0
 
-width: 30.0
-height: 30.0
+width: 5.0
+height: 5.0
 
 resolution: 0.05
 
-global_frame: buildingmap
+global_frame: map
 robot_base_frame: base_link
 rolling_window: false
 
