--- a/robot_explore/config/explore_costmap.yaml
+++ b/robot_explore/config/explore_costmap.yaml
@@ -1,31 +1,29 @@
+#Robot specific parameters
 footprint: [[0.27, 0.0], [-0.15, 0.26], [-0.15, -0.26]]
 inflation_radius: 0.10
 max_obstacle_height: 1.3
 robot_radius: 0.27
-track_unknown_space: true
-
 transform_tolerance: 0.5
 update_frequency: 5.0
 publish_frequency: 2.0
 
-width: 5.0
-height: 5.0
-
 resolution: 0.05
-
 global_frame: map
 robot_base_frame: base_link
 rolling_window: false
 
+#Must track unknown space to perform exploration
+track_unknown_space: true
+
 plugins: 
 
+    #Frontier exploration layer
     - {name: explore_boundary,        type: "robot_explore::BoundedExploreLayer"}
+    #Robot-specific sensor(s)
     - {name: explore_sensor,          type: "costmap_2d::ObstacleLayer"}
     - {name: inflation,               type: "costmap_2d::InflationLayer"}
 
-inflation:
-    inflation_radius: 0.15
-
+#Sensor needs to clear explored space and mark obstacles
 explore_sensor:
-    observation_sources: hokuyo
-    hokuyo: {data_type: LaserScan, clearing: true, marking: true, topic: /hokuyo/scan, inf_is_valid: true, obstacle_range: 1.0, raytrace_range: 1.0}
+    observation_sources: laser
+    laser: {data_type: LaserScan, clearing: true, marking: true, topic: scan, inf_is_valid: true}
