--- a/robot_explore/package.xml
+++ b/robot_explore/package.xml
@@ -21,15 +21,18 @@
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>tf</run_depend>
+
   <build_depend>message_generation</build_depend>
   <run_depend>message_runtime</run_depend>
   
   <build_depend>actionlib</build_depend>
   <run_depend>actionlib</run_depend>
 
-
   <build_depend>actionlib_msgs</build_depend>
   <run_depend>actionlib_msgs</run_depend>
+
+  <build_depend>pcl_ros</build_depend>
+  <run_depend>pcl_ros</run_depend>
 
     <export>
       <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
