--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>robot_explore</name>
+  <name>frontier_exploration</name>
   <version>0.0.1</version>
-  <description>The robot_explore package</description>
+  <description>ROS Node and Costmap 2D plugin layer for frontier exploration</description>
 
   <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
 
@@ -31,8 +31,10 @@
   <build_depend>actionlib_msgs</build_depend>
   <run_depend>actionlib_msgs</run_depend>
 
-  <build_depend>pcl_ros</build_depend>
-  <run_depend>pcl_ros</run_depend>
+  <build_depend>common_msgs</build_depend>
+  <run_depend>common_msgs</run_depend>
+  <build_depend>libpcl-all-dev</build_depend>
+  <run_depend>libpcl-all</run_depend>
 
     <export>
       <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
