--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,8 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
 )
 
-find_package(Boost REQUIRED COMPONENTS foreach system)
-find_package(PCL REQUIRED)
+find_package(Boost REQUIRED)
+find_package(PCL REQUIRED COMPONENTS common)
 
 add_message_files(
   FILES
@@ -55,7 +55,7 @@ catkin_package(
 include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS})
 
 add_library(explore_costmap plugins/bounded_explore_layer.cpp)
-target_link_libraries(explore_costmap ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${Boost_LIBRARIES})
+target_link_libraries(explore_costmap ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${PCL_LIBRARIES})
 add_dependencies(explore_costmap ${PROJECT_NAME}_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 
 add_executable(explore_server src/explore_server.cpp)
