--- a/package.xml
+++ b/package.xml
@@ -33,6 +33,13 @@
 
   <build_depend>common_msgs</build_depend>
   <run_depend>common_msgs</run_depend>
+
+  <build_depend>visualization_msgs</build_depend>
+  <run_depend>visualization_msgs</run_depend>
+
+  <build_depend>move_base_msgs</build_depend>
+  <run_depend>move_base_msgs</run_depend>
+
   <build_depend>libpcl-all-dev</build_depend>
   <run_depend>libpcl-all</run_depend>
 
