--- a/package.xml
+++ b/package.xml
@@ -2,8 +2,8 @@
 <package>
   <name>frontier_exploration</name>
   <version>0.1.8</version>
-  <description>ROS Node and Costmap 2D plugin layer for frontier exploration</description>
-
+  <description>The frontier_exploration package provides a <a href="http://www.ros.org/wiki/costmap_2d">costmap_2d</a> layer plugin that implements helper functions required for frontier exploration. An <a href="http://www.ros.org/wiki/actionlib">actionlib</a>) server and client are also provided as an implementation example.</description>
+  <author email="paul@bovbel.com">Paul Bovbel</author>
   <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
 
   <license>GPLv3</license>
