--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <package>
   <name>frontier_exploration</name>
   <version>0.2.1</version>
-  <description>The frontier_exploration package provides a <a href="http://www.ros.org/wiki/costmap_2d">costmap_2d</a> layer plugin that implements helper functions required for frontier exploration. An <a href="http://www.ros.org/wiki/actionlib">actionlib</a> server and client are also provided as an implementation example.</description>
+  <description>Frontier exploration implementation using a ROS costmap plugin. Usable in standalone operation through rviz UI, or through actionlib/service hooks.</description>
   <author email="paul@bovbel.com">Paul Bovbel</author>
   <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
 
