--- a/package.xml
+++ b/package.xml
@@ -6,6 +6,10 @@
   <author email="paul@bovbel.com">Paul Bovbel</author>
   <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
 
+  <url type="website">http://ros.org/wiki/frontier_exploration</url>
+  <url type="bugtracker">https://github.com/paulbovbel/frontier_exploration/issues</url>
+  <url type="repository">https://github.com/paulbovbel/frontier_exploration</url>
+
   <license>GPLv3</license>
 
   <buildtool_depend>catkin</buildtool_depend>
