--- a/package.xml
+++ b/package.xml
@@ -11,7 +11,7 @@
   <url type="bugtracker">https://github.com/paulbovbel/frontier_exploration/issues</url>
   <url type="repository">https://github.com/paulbovbel/frontier_exploration</url>
 
-  <license>GPLv3</license>
+  <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>costmap_2d</build_depend>
