--- a/.travis.yml
+++ b/.travis.yml
@@ -21,14 +21,17 @@ env:
     - ROS_DISTRO="indigo"   PRERELEASE=true
     - ROS_DISTRO="jade"   ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu  USE_DEB=true
     - ROS_DISTRO="jade"   ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu  USE_DEB=true
-    - ROS_DISTRO="kinetic"
+    - ROS_DISTRO="kinetic"   ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu  USE_DEB=true
+    - ROS_DISTRO="kinetic"   ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu  USE_DEB=true
+    - ROS_DISTRO="kinetic"  PRERELEASE=true
 matrix:
   allow_failures:
+    - env: ROS_DISTRO="indigo"   PRERELEASE=true
     - env: ROS_DISTRO="jade"   ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu  USE_DEB=true
     - env: ROS_DISTRO="jade"   ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu  USE_DEB=true
-    - env: ROS_DISTRO="kinetic"
+    - env: ROS_DISTRO="kinetic"  PRERELEASE=true
 before_script:
   - git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
 script:
-  - source .ci_config/travis.sh
-#  - source ./travis.sh  # Enable this when you have a package-local script 
+  - .ci_config/travis.sh
+
