--- a/polygon_layer/CMakeLists.txt
+++ b/polygon_layer/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(polygon_layer)
 
-set_directory_properties(PROPERTIES COMPILE_OPTIONS "-std=c++14;-Wall;-Werror")
+set_directory_properties(PROPERTIES COMPILE_OPTIONS "-std=c++14")
 
 find_package(catkin REQUIRED COMPONENTS
   costmap_2d
