--- a/frontier_exploration/CMakeLists.txt
+++ b/frontier_exploration/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(frontier_exploration)
 
+set_directory_properties(PROPERTIES COMPILE_OPTIONS "-std=c++14;-Wall;-Werror")
+
 find_package(catkin REQUIRED COMPONENTS
   costmap_2d
+  exploration_server
   dynamic_reconfigure
   move_base_msgs
   geometry_msgs
@@ -24,13 +27,6 @@ add_message_files(
   Frontier.msg
 )
 
-add_service_files(
-  FILES
-  UpdateBoundaryPolygon.srv
-  GetNextFrontier.srv
-  BlacklistPoint.srv
-)
-
 add_action_files(
   FILES
   ExploreTask.action
@@ -46,6 +42,7 @@ catkin_package(
   LIBRARIES explore_costmap
   CATKIN_DEPENDS
     costmap_2d
+    exploration_server
     dynamic_reconfigure
     geometry_msgs
     roscpp
@@ -58,17 +55,9 @@ catkin_package(
 
 include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS})
 
-add_library(explore_costmap plugins/bounded_explore_layer.cpp src/frontier_search.cpp)
-target_link_libraries(explore_costmap ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${PCL_LIBRARIES})
-add_dependencies(explore_costmap ${PROJECT_NAME}_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
-
-add_executable(explore_server src/explore_server.cpp)
-target_link_libraries(explore_server ${catkin_LIBRARIES})
-add_dependencies(explore_server ${PROJECT_NAME}_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
-
-add_executable(explore_client src/explore_client.cpp)
-target_link_libraries(explore_client ${catkin_LIBRARIES})
-add_dependencies(explore_client ${PROJECT_NAME}_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
+add_library(frontier_plugin src/frontier_plugin.cpp src/frontier_search.cpp)
+target_link_libraries(frontier_plugin ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${PCL_LIBRARIES})
+add_dependencies(frontier_plugin ${PROJECT_NAME}_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 
 if(CATKIN_ENABLE_TESTING)
   # Find package test dependencies
@@ -93,10 +82,7 @@ if(CATKIN_ENABLE_TESTING)
 
 endif()
 
-install(TARGETS explore_server explore_client
-        RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
-
-install(TARGETS explore_costmap
+install(TARGETS frontier_plugin
         ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
         LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
         RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION})
@@ -105,10 +91,13 @@ install(DIRECTORY include/${PROJECT_NAME}/
         DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
         PATTERN ".svn" EXCLUDE)
 
-install(DIRECTORY launch/
-        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
-        PATTERN ".svn" EXCLUDE)
-
-install(FILES costmap_plugins.xml
+install(FILES frontier_plugin.xml
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
+
+find_package(roslint REQUIRED)
+roslint_cpp()
+
+if(CATKIN_ENABLE_TESTING)
+  roslint_add_test()
+endif()
