--- a/frontier_exploration/package.xml
+++ b/frontier_exploration/package.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0"?>
 <package>
   <name>frontier_exploration</name>
-  <version>0.3.1</version>
+  <version>0.4.2</version>
   <description>Implementation of <a href = "http://www.robotfrontier.com/papers/cira97.pdf">frontier exploration</a> for ROS, extending on the existing navigation stack (costmap_2d, move_base).
   It accepts exploration goals via <a href="http://www.ros.org/wiki/actionlib">actionlib</a> (Rviz UI provided), sends movement commands to <a href="http://www.ros.org/wiki/move_base">move_base</a>.</description>
   <author email="paul@bovbel.com">Paul Bovbel</author>
+  <author email="vickymmcd@gmail.com">Vicky McDermott</author>
   <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
 
   <url type="website">http://ros.org/wiki/frontier_exploration</url>
@@ -28,10 +29,11 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>std_srvs</run_depend>
   <run_depend>tf</run_depend>
+  <build_depend>roslint</build_depend>
 
   <build_depend>message_generation</build_depend>
   <run_depend>message_runtime</run_depend>
-  
+
   <build_depend>actionlib</build_depend>
   <run_depend>actionlib</run_depend>
 
@@ -47,7 +49,10 @@
   <build_depend>libpcl-all-dev</build_depend>
   <run_depend>libpcl-all</run_depend>
 
+  <build_depend>exploration_server</build_depend>
+  <run_depend>exploration_server</run_depend>
+
     <export>
-      <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
+      <exploration_server plugin="${prefix}/frontier_plugin.xml" />
     </export>
 </package>
