--- a/polygon_layer/package.xml
+++ b/polygon_layer/package.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>polygon_layer</name>
-  <version>0.3.0</version>
+  <version>0.4.2</version>
   <description>Costmap 2D Layer plugin for drawing a polygonal boundary.</description>
 
   <author email="paul@bovbel.com">Paul Bovbel</author>
+  <author email="vickymmcd@gmail.com">Vicky McDermott</author>
   <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
 
   <url type="website">http://ros.org/wiki/polygon_layer</url>
@@ -14,6 +15,7 @@
   <license>GPLv3</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>roslint</build_depend>
 
   <depend>costmap_2d</depend>
   <depend>dynamic_reconfigure</depend>
