--- a/polygon_layer/CMakeLists.txt
+++ b/polygon_layer/CMakeLists.txt
@@ -49,6 +49,7 @@ install(FILES costmap_plugins.xml
 )
 
 find_package(roslint REQUIRED)
+set(ROSLINT_CPP_OPTS "--filter=-legal/copyright")
 roslint_cpp()
 
 if(CATKIN_ENABLE_TESTING)
