Update CI for melodic/bionic

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ notifications:
       - paul@bovbel.com
 env:
   matrix:
-    - ROS_DISTRO="lunar" OS_NAME=ubuntu OS_CODE_NAME=xenial
+    - ROS_DISTRO="melodic" OS_NAME=ubuntu OS_CODE_NAME=bionic
 before_script:
   - git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
 script:
