--- a/exploration_server/package.xml
+++ b/exploration_server/package.xml
@@ -22,6 +22,7 @@
   <depend>move_base_msgs</depend>
   <depend>polygon_layer</depend>
   <depend>roscpp</depend>
+  <depend>tf</depend>
   <export>
     <exploration_server plugin="${prefix}/example_plugin.xml" />
   </export>
