cleanup cmake for noetic

--- a/exploration_server/CMakeLists.txt
+++ b/exploration_server/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.0.2)
 project(exploration_server)
 
 set_directory_properties(PROPERTIES COMPILE_OPTIONS "-std=c++14;-Wall;-Werror")
@@ -7,14 +7,13 @@ set_directory_properties(PROPERTIES COMPILE_OPTIONS "-std=c++14;-Wall;-Werror")
 find_package(catkin REQUIRED COMPONENTS actionlib costmap_2d exploration_msgs roscpp move_base_msgs tf)
 
 catkin_package(
-  INCLUDE_DIRS include
-  CATKIN_DEPENDS
-    actionlib
-    costmap_2d
-    exploration_msgs
-    roscpp
-    tf
-)
+        INCLUDE_DIRS include
+        CATKIN_DEPENDS
+        actionlib
+        costmap_2d
+        exploration_msgs
+        roscpp
+        tf)
 
 include_directories(include ${catkin_INCLUDE_DIRS})
 
@@ -24,19 +23,18 @@ target_link_libraries(exploration_server ${catkin_LIBRARIES})
 
 add_executable(exploration_server_node src/exploration_server_node.cpp)
 target_link_libraries(exploration_server_node
-  exploration_server ${catkin_LIBRARIES}
-)
+        exploration_server
+        ${catkin_LIBRARIES})
 
 add_executable(plugin_client src/plugin_client.cpp)
 target_link_libraries(plugin_client
-  exploration_server ${catkin_LIBRARIES}
-)
+        exploration_server
+        ${catkin_LIBRARIES})
 
 install(TARGETS exploration_server exploration_server_node
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
+        ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+        LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+        RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 install(DIRECTORY include/${PROJECT_NAME}/
         DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
@@ -47,5 +45,5 @@ set(ROSLINT_CPP_OPTS "--filter=-legal/copyright")
 roslint_cpp()
 
 if(CATKIN_ENABLE_TESTING)
-  roslint_add_test()
+    roslint_add_test()
 endif()
